--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     -->
     <title>Group 1 Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
