CSS adjustments, remove debug lines, clock

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Agbalumo&family=Caprasimo&family=Chicle&family=Fontdiner+Swanky&family=Gloock&family=Lilita+One&family=Montserrat&family=Passion+One&family=Rozha+One&family=Stoke&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Stoke&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
